# NOvASim

./: CMakeLists.txt  FiberBulkAbsorb.cfg  GraphExit.C  NOVA.cfg  WLSabsorbguess.cfg  bad.WLSabsorb.cfg  graphfromfile.C  nova.NOVA.cfg  nova.cc  proto.NOVA.cfg  rutile.txt  setgun.mac  setsource.mac  setsource1.mac  setsource2.mac  setsource3.mac  setsource4.mac  setsource5.mac  setsource6.mac  setsource7.mac
include/: NOVAstrip.hh  WLSfiber.hh  WLSfiberhh  novaEventAction.hh  novaGeometry.hh  novaPhysics.hh  novaPrimaryGeneratorAction.hh  novaRunAction.hh  novaSteppingAction.hh  novaTrackInformation.hh  novaTrackingAction.hh  novaVisManager.hh  shashlikModulehh
scripts/: AbsProfile.C  CompRef.C  CompileStats.C  FindAvg.C  PlotEdepStuff.C  Spectrum.C  TGraph.C  ViewSpectrum.C  readpoints.C  reflections.C  runnova.csh  runprototype.csh  runprototype_center.csh
src/: NOVAstrip.cc  WLSfiber.cc  good.NOVAstrip  novaEventAction.cc  novaGeometry.cc  novaPhysics.cc  novaPrimaryGeneratorAction.cc  novaRunAction.cc  novaSteppingAction.cc  novaSteppingAction.cc~  novaTrackInformation.cc  novaTrackingAction.cc  novaVisManager.cc  old.novaPhysics  sav.NOVAstrip_121707
